'criando crud sql'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,20 @@
 <%- include ('partials/header.ejs'); %>
+<%- include ('partials/nav.ejs'); %>
 
-<body>
-    <div class="container">
-         <h1>Meu Blog</h1>
-         <hr>
-         <form method="POST" action="/salvar">
-            <label >Escreva um post: </label>
+        <div class="card">
+            <div class="card-header">
+                <h4>Você postou: </h4>
+            </div>
+            <div class="card-body">
+            </div>
+        </div>
+        <br>
+        <form method="POST" action="/salvar">
+            <label>Escreva um post: </label>
             <textarea placeholder="No que você está pensando..." name="body" rows="5" class="form-control"> </textarea>
             <br>
             <button class="btn btn-outline-success">Postar</button>
-        </form>
+        </form> 
+
     </div>
-<%- include ('partials/footer.ejs') %>
+    <%- include ('partials/footer.ejs') %>
