--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -88,7 +88,10 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-
+.title, .title:hover{
+  text-decoration:none;
+  color: black;
+}
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
